refactor css / structure

--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -1,4 +1,4 @@
-<div class="mesgs">
+<div class="msgs">
   <div class="msg_history">
 
     <li class="message" *ngFor="let message of room.messages">
@@ -31,7 +31,6 @@
       </ng-template>
     </li>
 
-
   </div>
   <div class="type_msg">
     <form class="input_msg_w rite" (ngSubmit)="sendMessage()">
@@ -47,7 +46,6 @@
       </button>
     </form>
   </div>
-
 
 </div>
 
