--- a/src/app/component/chat/chat.component.html
+++ b/src/app/component/chat/chat.component.html
@@ -13,41 +13,7 @@
 <div class="content" role="main">
   <div class="container">
     <h3 class=" text-center">GreenCity chat</h3>
-    <div class="messaging">
-      <div class="inbox_msg">
-        <div class="inbox_people">
-          <div class="headind_srch">
-            <div class="channel_heading">
-              <h4>Channels</h4>
-            </div>
-          </div>
-          <div class="inbox_chat">
-            <div class="channels" *ngFor="let room of chatRooms" (click)="setCurrentRoom(room)">
-              <div class="chat_list">
-                <div class="chat_people">
-                  <div class="chat_ib">
-                    <h5>
-                      {{ room.name }}
-                    </h5>
-                    <p *ngIf="room.messages.length != 0">
-                      {{
-                      room.messages[
-                      room.messages.length - 1
-                        ].content
-                      }}
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <app-chat-room-messages *ngIf="currentClickedRoom"
-                                [room] = currentClickedRoom
-                                [currentUser]="currentUser"
-        ></app-chat-room-messages>
-      </div>
-    </div>
+    <app-chat-rooms></app-chat-rooms>
   </div>
 </div>
 
