--- a/src/app/component/chat-messages/chat-messages.component.css
+++ b/src/app/component/chat-messages/chat-messages.component.css
@@ -44,7 +44,7 @@ img {
 }
 
 .sent_msg p {
-  background: #05728f none repeat scroll 0 0;
+  background: #10804E none repeat scroll 0 0;
   border-radius: 3px;
   font-size: 14px;
   margin: 0;
@@ -69,7 +69,7 @@ img {
 }
 
 .msg_send_btn {
-  background: #05728f none repeat scroll 0 0;
+  background: #10804E none repeat scroll 0 0;
   border: medium none;
   border-radius: 50%;
   color: #fff;
