--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -1,6 +1,6 @@
 <div class="msgs">
   <div class="msg_history">
-
+    <ul>
     <li class="message" *ngFor="let message of room.messages">
       <div
         *ngIf="message.senderId !== currentUser?.id;
@@ -18,6 +18,14 @@
           <div class="received_msg">
             <div class="received_withd_msg">
               <p>{{ message.content }}</p>
+              <p>{{message.id}}</p>
+            </div>
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button class="dropdown-item btn-sm" (click)="deleteMessage(message.id)">Delete</button>
+              </div>
             </div>
           </div>
         </div>
@@ -25,28 +33,39 @@
       <ng-template #outgoing_msg>
         <div class="outgoing_msg">
           <div class="sent_msg">
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <button class="dropdown-item btn-sm" (click)="deleteMessage(message.id)">Delete</button>
+                <button class="dropdown-item btn-sm" (click)="updateMessage(message.id, message.content)">Update</button>
+              </div>
+            </div>
             <p>{{ message.content }}</p>
+            <p>{{message.id}}</p>
           </div>
         </div>
       </ng-template>
     </li>
-
+</ul>
   </div>
   <div class="type_msg">
-    <form class="input_msg_w rite" (ngSubmit)="sendMessage()">
-      <input
-        type="text"
-        class="write_msg"
-        placeholder="Type a message"
-        name="newMessage"
-        [(ngModel)]="newMessage"
-      />
+    <form class="input_msg_w rite" (ngSubmit)="sendMessage()" (click)="sendMessage()">
+      <label>
+        <input
+          type="text"
+          class="write_msg"
+          placeholder="Type a message"
+          name="newMessage"
+          [(ngModel)]="newMessage">
+      </label>
       <button class="msg_send_btn" type="button">
         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
       </button>
     </form>
   </div>
 
-</div>
+  </div>
+
 
 
