--- a/src/app/component/chat-rooms/chat-rooms.component.html
+++ b/src/app/component/chat-rooms/chat-rooms.component.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="inbox_chat">
-        <div class="channels" *ngFor="let room of chatRooms" (click)="setCurrentRoom(room)">
+        <div class="channels" *ngFor="let room of chatRooms.slice().reverse()" (click)="setCurrentRoom(room)">
           <div class="chat_list">
           <h5>{{room.name}}<button class="btn btn-navbar" (click)="deleteChatRoom(room.id)"><i class="fa fa-trash" aria-hidden="true"></i>
           </button></h5>
