--- a/src/app/component/chat-rooms/chat-rooms.component.html
+++ b/src/app/component/chat-rooms/chat-rooms.component.html
@@ -6,30 +6,7 @@
     <div class="row">
       <div class="col">
     <div class="inbox_people">
-      <!--<div class="headind_srch">
-        <div class="channel_heading">
-          <h4>All Participants</h4>
-          <form (submit)="getParticipant(participant.value)" class="form-group">
-            <label>
-              <input type="text" placeholder="Search..." #participant class="searchInput" size="10">
-            </label>
-            <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
-          </form>
-          <button (click)="openAddFileDialog()">Here</button>
-        </div>
-      </div>-->
-      <!--<div class="inbox_chat">
-        <div class="channels" *ngFor="let participant of allParticipants" (click)="setCurrentRoom(getPrivateChatRoom(participant.id))">
-          <div class="chat_list">
-            <h5>
-              {{ participant.name}}
-            </h5>
-          </div>
-        </div>
-        <div class="channels" *ngFor="let groupRoom of groupChats" (click)="setCurrentRoom(groupRoom)">
-          <h5>{{groupRoom.name}}</h5>
-        </div>
-      </div>-->
+
       <div class="headind_srch">
         <div class="channel_heading">
           <h4>All Chats</h4>
@@ -39,8 +16,13 @@
             </label>
             <button class="btn btn-navbar"><i class="fa fa-search"></i></button>
           </form>
+          
+          <div class="dialog">
           <button (click)="openAddFileDialog()" class="btn btn-navbar">Group Chat</button>
+          </div>
+
           <div class="btn-group dropright">
+
             <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Chat with...
             </button>
@@ -56,7 +38,9 @@
                 {{participant.name}}
               </button>
             </div>
+
           </div>
+          
         </div>
       </div>
       <div class="inbox_chat">
