--- a/src/app/component/modal/modal.component.css
+++ b/src/app/component/modal/modal.component.css
@@ -1,4 +1,16 @@
 table, th, td {
   border: 1px solid black;
+  width: 30%;
+  height: 100%;
 }
+
+.main{
+  position: absolute;
+  top: 4%;
+  left: 46%;
+  background-color: white;
+  height: 560px;
+
+}
+
 
