--- a/src/app/component/chat-rooms/chat-rooms.component.html
+++ b/src/app/component/chat-rooms/chat-rooms.component.html
@@ -1,4 +1,5 @@
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+<link href="/examples/vendors/bootstrap-4.3/css/bootstrap.min.css" rel="stylesheet">
 <div class="container">
 
 <div class="messaging">
@@ -9,7 +10,6 @@
 
       <div class="headind_srch">
         <div class="channel_heading">
-          <h4>All Chats</h4>
           <form (submit)="getChatRooms(room.value)" class="form-group">
             <label>
               <input type="text" placeholder="Search..." #room class="searchInput" size="10">
@@ -24,7 +24,7 @@
 
           <div class="btn-group dropright">
 
-            <button type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button type="button" class="btn btn-navbar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Chat with...
             </button>
 
@@ -45,10 +45,30 @@
         </div>
       </div>
       <div class="inbox_chat">
-        <div class="channels" *ngFor="let room of chatRooms.slice().reverse()" (click)="setCurrentRoom(room)">
+        <div class="channels" *ngFor="let room of chatRooms.slice().reverse()">
           <div class="chat_list">
-          <h5>{{room.name}}<button class="btn btn-navbar" (click)="deleteChatRoom(room.id)"><i class="fa fa-trash" aria-hidden="true"></i>
-          </button></h5>
+          <h5  (click)="setCurrentRoom(room)">{{room.name}}<button class="btn btn-navbar" (click)="deleteChatRoom(room.id)"><i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
+        </h5>
+          <div *ngIf="room.chatType === 'GROUP'">
+          <div class="dropdown">
+            <button class="btn btn-navbar" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-pencil-square" aria-hidden="true"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div *ngIf="currentUser.id === room.ownerId">
+              <button class="dropdown-item btn-md" (click)="rename(name, room)">Rename</button>
+              <button class="dropdown-item btn-md" (click)="addParticipantsChatRoom(manage2, room)">Add member</button>
+              <button class="dropdown-item btn-md" (click)="removeParticipantsChatRoom(manage, room)">Remove member</button>
+              </div>
+              <button class="dropdown-item btn-md" (click)="viewGroupInfo(info, room)">View group info</button>
+              <div *ngIf="currentUser.id !== room.ownerId">
+                <button class="dropdown-item btn-md" (click)="leaveGroupChat(room.id)">Leave group chat</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
           </div>
         </div>
       </div>
@@ -63,6 +83,12 @@
 </div>
 
 <ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Create group chat:</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
    <table class="table">
     <tr>
       <th colspan="2">Choose members:</th>
@@ -88,8 +114,105 @@
       </td>
     </tr>
 </table>  
-
 </ng-template>
+
+
+<ng-template #info let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Group info</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<div><strong>Chat name: </strong>{{currentClickedRoom.name}}</div>
+<div><strong>Current members:</strong></div>
+<div *ngFor="let part of currentClickedRoom.participants">
+{{part.name}}
+</div>
+<button type="button" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
+</ng-template>
+
+
+<ng-template #name let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Rename</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <form class="form-inline">
+    <div class="form-group mx-sm-3 mb-2">
+      <input type="text" id="chatName" name="chatName" #chatName="ngModel" [(ngModel)]="model.chatName" #chatName 
+      class="form-control" size="50" placeholder="Old name: {{currentClickedRoom.name}}">
+    </div>
+    <button type="submit" class="btn btn-outline-secondary" (click)="renameGroupChat(currentClickedRoom)">Rename</button>
+    <button type="submit" class="btn btn-outline-secondary" (click)="modal.close('Save click')">Cancel</button>
+  </form>
+  </ng-template>
+
+  <ng-template #manage let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Remove members:</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <table class="table">
+      <tr>
+       <td>
+        <div *ngFor="let participant of list" (click)="remove(participant)">
+          <div *ngIf="participant.id !== currentUser.id">
+          {{participant.name}}
+          </div>
+        </div>
+        </td>
+        <!-- <td>
+          <div *ngFor="let part of list" (click)="remove(part)">
+          {{part.name}}
+          </div> 
+        </td> -->
+        <td>
+          <button (click)="manageChatRoom(list)" class="btn btn-outline-dark">Save</button>
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
+        </td>
+      </tr>
+    </table>
+  </ng-template>
+
+  <ng-template #manage2 let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Add members:</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <table class="table">
+      <tr>
+       <td>
+        <div *ngFor="let participant of allParticipants" (click)="add(participant)">
+          <div *ngIf="participant.id !== currentUser.id">
+          {{participant.name}}
+          </div>
+        </div>
+        </td>
+        <td>
+          <div *ngFor="let part of list">
+          {{part.name}}
+          </div>
+        </td>
+        <!-- <td>
+          <div *ngFor="let part of list" (click)="remove(part)">
+          {{part.name}}
+          </div> 
+        </td> -->
+        <td>
+          <button (click)="manageChatRoom(list)" class="btn btn-outline-dark">Save</button>
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
+        </td>
+      </tr>
+    </table>
+  </ng-template>
+
 
 </div>
 
