--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -44,9 +44,22 @@
               </div>
             </div>
             <p>{{ message.content }}</p>
+            <!-- Show media -->
             <div *ngIf="message.imageName !== null">
-              <img src="http://localhost:8070/chat/image/{{message.imageName}}" alt="image"/>
+              <div *ngIf="message.fileType === 'image'">
+                <img src="http://localhost:8070/chat/media/{{message.imageName}}" alt="image">
+              </div>
+              <div *ngIf="message.fileType === 'video'">
+                <video width="260" controls>
+                  <source src="http://localhost:8070/chat/media/{{message.imageName}}">
+                  Your browser doesn't support HTML5 video tag.
+                </video>
+              </div>
+              <div *ngIf="message.fileType === 'doc'">
+                <a href="http://localhost:8070/chat/document/download/{{message.imageName}}">{{message.imageName}}</a>
+              </div>
             </div>
+            <!-- End media -->
           </div>
         </div>
       </ng-template>
@@ -63,13 +76,21 @@
           name="newMessage"
           [(ngModel)]="newMessage">
       </label>
-        <label class="file_choose_btn" for="exampleInputFile"><i class="fa fa-paperclip" aria-hidden="true" style="font-size:30px;color: #10804E;"></i></label>
-        <input type="file" name="file" (change)="fileChange($event)" class="msg_send_btn" id="exampleInputFile" aria-describedby="fileHelp">
+        <!-- <label class="file_choose_btn" for="exampleInputFile"><i class="fa fa-paperclip" aria-hidden="true" style="font-size:30px;color: #10804E;"></i></label>
+        <input type="file" name="file" (change)="fileChange($event)" class="msg_send_btn" id="exampleInputFile" aria-describedby="fileHelp"> -->
+        
+        <div>
+            <div>
+              <input type="file" name="profile" (change)="onFileSelect($event)" />
+            </div>
+        </div>
+
       <button class="msg_send_btn" type="button" (click)="sendMessage()">
         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
       </button>
     </form>
   </div>
+
 
   </div>
 
