--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -17,6 +17,9 @@
           </div>
           <div class="received_msg">
             <div class="received_withd_msg">
+              <div *ngIf="message.likedUserId!==null&&message.likedUserId.length!==0" >
+                <div>{{message.likedUserId.length}}</div>
+              </div>
               <p>{{ message.content }}</p>
               <!-- Show media -->
             <div *ngIf="message.fileName !== null">
@@ -47,6 +50,7 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <button class="dropdown-item btn-sm" (click)="deleteMessage(message.id)">Delete</button>
+                <button class="dropdown-item btn-sm" (click)="likeMessage(message.id)">Like</button>
               </div>
             </div>
             </ng-template>
@@ -63,6 +67,9 @@
                 <button class="dropdown-item btn-sm" (click)="deleteMessage(message.id)">Delete</button>
                 <button class="dropdown-item btn-sm" (click)="updateMessage(message.id, message.content)">Update</button>
               </div>
+            </div>
+            <div *ngIf="message.likedUserId!==null&&message.likedUserId.length!==0" >
+              <div>{{message.likedUserId.length}}</div>
             </div>
             <p>{{ message.content }}</p>
             <!-- Show media -->
@@ -106,13 +113,13 @@
               </label>
                 <!-- <label class="file_choose_btn" for="exampleInputFile"><i class="fa fa-paperclip" aria-hidden="true" style="font-size:30px;color: #10804E;"></i></label>
                 <input type="file" name="file" (change)="fileChange($event)" class="msg_send_btn" id="exampleInputFile" aria-describedby="fileHelp"> -->
-                
+
                 <div>
                     <div>
                       <input type="file" name="profile" (change)="onFileSelect($event)" />
                     </div>
                 </div>
-        
+
               <button class="msg_send_btn" type="button" (click)="sendMessage()">
                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
               </button>
