--- a/src/app/component/chat-messages/chat-messages.component.css
+++ b/src/app/component/chat-messages/chat-messages.component.css
@@ -81,6 +81,31 @@ img {
   top: 11px;
   width: 33px;
 }
+.msg_voice{
+  background: #10804E none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 40px;
+  top: 11px;
+  width: 33px;
+}
+.msg_voice_file_name{
+  font-size: 17px;
+  position: absolute;
+  right: 100px;
+  top: 11px;
+}
+.msg_delete_voice_btn{
+  background: #10804E none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 17px;
+}
 
 .file_choose_btn {
   border: medium none;
