change record button

--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -137,7 +137,7 @@
 
               </div>
 
-              <button id="msg_voice_btn_id" class="msg_voice" (mousedown)="initiateRecording()" (mouseup)="stopRecording()" >
+              <button id="msg_voice_btn_id" class="msg_voice" (click)="recordVoiceMessage()" >
                 <i class="fa fa-microphone" aria-hidden="true"></i>
               </button>
 
