--- a/src/app/component/chat-rooms/chat-rooms.component.html
+++ b/src/app/component/chat-rooms/chat-rooms.component.html
@@ -178,7 +178,7 @@
           </div>
         </td> -->
         <td>
-          <button (click)="manageChatRoom(list)" class="btn btn-outline-dark">Save</button>
+          <button (click)="removeParticipantsFromChatRoom(list)" class="btn btn-outline-dark">Save</button>
           <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
         </td>
       </tr>
