--- a/src/app/component/chat-messages/chat-messages.component.html
+++ b/src/app/component/chat-messages/chat-messages.component.html
@@ -58,7 +58,7 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <button class="dropdown-item btn-sm" (click)="deleteMessage(message.id)">Delete</button>
-                <div *ngIf="message.likedUserId.includes(currentUser.id)
+                <div *ngIf="message.likedUserId!==null&&message.likedUserId.length!==0&&message.likedUserId.includes(currentUser.id)
                     then dislike_btn
                     else like_btn;">
                 </div>
